--- a/monsterarchive.client/src/app/nav-menu/nav-menu.component.html
+++ b/monsterarchive.client/src/app/nav-menu/nav-menu.component.html
@@ -1,9 +1,9 @@
 <header>
     <mat-toolbar color="primary">
         <button mat-icon-button [routerLink]="['/']">
-            <mat-icon>
-                home
-            </mat-icon>
-        </button>
+            <mat-icon>home</mat-icon>
+        </button> |
+        <a mat-flat-button color="primary" [routerLink]="['/loot']">City</a> |
+        
     </mat-toolbar>
 </header>
