--- a/monsterarchive.client/src/app/nav-bar/nav-bar.html
+++ b/monsterarchive.client/src/app/nav-bar/nav-bar.html
@@ -3,7 +3,8 @@
         <button mat-icon-button [routerLink]="['/']">
             <mat-icon>home</mat-icon>
         </button> |
-        <a mat-flat-button color="primary" [routerLink]="['/loot']">City</a> |
+        <a mat-flat-button color="primary" [routerLink]="['/loot']">Loot</a> |
+        <a mat-flat-button color="primary" [routerLink]="['/monster']">Monster</a>
         
     </mat-toolbar>
 </header>
