Simple changes to port connections in server allowed data fetching to be successful

--- a/monsterarchive.client/src/app/monster/monster.html
+++ b/monsterarchive.client/src/app/monster/monster.html
@@ -19,7 +19,7 @@
             <td>{{monster.element}}</td>
             <td>{{monster.weakness}}</td>
             <td>{{monster.rank}}</td>
-            <td>{{monster.aggresionLevel}}</td>
+            <td>{{monster.aggressionLevel}}</td>
         </tr>
     }
     </tbody>
