Identity tables populated
A lot of running around in circles only to realize the errors were really that stupid

Had trouble getting the identity tables to have valid column names and the error was due to forgetting to add AddToRoleAsync for the regular user

Couldn't Post (login) to a user account for authentication because I never populated the databases to begin with

--- a/monsterarchive.client/src/app/loot/loot.html
+++ b/monsterarchive.client/src/app/loot/loot.html
@@ -10,7 +10,6 @@
         @for (loot of (loots$ | async); track $index) {
         <tr>
             <td><a [routerLink]="['/loot', loot.lootId]">{{loot.lootId}}</a></td>
-            <td>{{loot.lootId}}</td>
             <td>{{loot.itemName}}</td>
             <td>{{loot.rarity}}</td>
             <td>{{loot.monsterId}}</td>
@@ -18,3 +17,9 @@
     }
     </tbody>
 </table>
+
+<!--To do:
+See Chapter 6
+Add MatTable module and use mat-table for better styling
+Add Pagination when there are lots of loot itmes
+-->
