--- a/monsterarchive.client/src/app/monster/monster.html
+++ b/monsterarchive.client/src/app/monster/monster.html
@@ -8,14 +8,13 @@
         <th>Weakness</th>
         <th>Rank</th>
         <th>AggresionLevel</th>
-        <!-- <th>Loots</th> -->
     </thead>
     <tbody>
         @for (monster of (monsters$ | async); track $index) {
         <tr>
             <td><a [routerLink]="['/monster', monster.monsterId]">{{monster.monsterId}}</a></td>
-            <td>{{monster.monsterId}}</td>
             <td>{{monster.name}}</td>
+            <td>{{monster.species}}</td>
             <td>{{monster.element}}</td>
             <td>{{monster.weakness}}</td>
             <td>{{monster.rank}}</td>
