--- a/monsterarchive.client/src/app/nav-bar/nav-bar.html
+++ b/monsterarchive.client/src/app/nav-bar/nav-bar.html
@@ -4,7 +4,15 @@
             <mat-icon>home</mat-icon>
         </button> |
         <a mat-flat-button color="primary" [routerLink]="['/loot']">Loot</a> |
-        <a mat-flat-button color="primary" [routerLink]="['/monster']">Monster</a>
+        <a mat-flat-button color="primary" [routerLink]="['/monster']">Monster</a> |
+
+        <Span class = "spacer"></Span>
+        @if (authService.isLoggedIn()){
+            <a mat-flat-button color="primary" (click) = "authService.logout()">Logout</a>
+        }
+        @else{
+            <a mat-flat-button color="primary" [routerLink]="['/login']">Login</a>
+        }
         
     </mat-toolbar>
 </header>
